[package]
name = "familyapp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.18"
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-secrets = "0.25.0"
shuttle-service = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres-rustls", "sqlx"] }
shuttle-static-folder = "0.25.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
tera = "1.19.0"
tokio = "1.28.2"
tower-http = { version = "0.4.4", features = ["fs"] }
